--- a/src/output.css
+++ b/src/output.css
@@ -582,16 +582,13 @@ video {
   z-index: 5;
 }
 
-.z-20{
-  z-index: 20;
-}
-
-.-z-20{
-  z-index: -20;
-}
-
 .col-span-6{
   grid-column: span 6 / span 6;
+}
+
+.mx-auto{
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .my-10{
@@ -602,11 +599,6 @@ video {
 .my-2{
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
-}
-
-.mx-auto{
-  margin-left: auto;
-  margin-right: auto;
 }
 
 .-ml-1{
@@ -685,12 +677,24 @@ video {
   height: 100vh;
 }
 
+.h-\[200px\]{
+  height: 200px;
+}
+
+.h-\[250px\]{
+  height: 250px;
+}
+
 .h-\[25px\]{
   height: 25px;
 }
 
 .h-\[300px\]{
   height: 300px;
+}
+
+.h-\[400px\]{
+  height: 400px;
 }
 
 .h-\[50\%\]{
@@ -785,6 +789,10 @@ video {
   width: 60%;
 }
 
+.w-\[600px\]{
+  width: 600px;
+}
+
 .w-\[80\%\]{
   width: 80%;
 }
@@ -865,10 +873,6 @@ video {
 
 .justify-start{
   justify-content: flex-start;
-}
-
-.justify-end{
-  justify-content: flex-end;
 }
 
 .justify-center{
@@ -983,26 +987,16 @@ video {
   border-radius: 0.75rem;
 }
 
-.rounded-b-xl{
-  border-bottom-right-radius: 0.75rem;
-  border-bottom-left-radius: 0.75rem;
-}
-
-.rounded-b{
-  border-bottom-right-radius: 0.25rem;
-  border-bottom-left-radius: 0.25rem;
-}
-
 .border{
   border-width: 1px;
 }
 
-.border-2{
-  border-width: 2px;
-}
-
 .border-0{
   border-width: 0px;
+}
+
+.border-2{
+  border-width: 2px;
 }
 
 .border-b{
@@ -1044,19 +1038,24 @@ video {
   border-color: rgb(254 202 202 / var(--tw-border-opacity));
 }
 
+.border-red-600{
+  --tw-border-opacity: 1;
+  border-color: rgb(220 38 38 / var(--tw-border-opacity));
+}
+
 .border-sky-200{
   --tw-border-opacity: 1;
   border-color: rgb(186 230 253 / var(--tw-border-opacity));
 }
 
+.border-sky-300{
+  --tw-border-opacity: 1;
+  border-color: rgb(125 211 252 / var(--tw-border-opacity));
+}
+
 .border-sky-600{
   --tw-border-opacity: 1;
   border-color: rgb(2 132 199 / var(--tw-border-opacity));
-}
-
-.border-sky-800{
-  --tw-border-opacity: 1;
-  border-color: rgb(7 89 133 / var(--tw-border-opacity));
 }
 
 .border-slate-600{
@@ -1078,6 +1077,14 @@ video {
   background-color: #11111190;
 }
 
+.bg-\[\#ffffff00\]{
+  background-color: #ffffff00;
+}
+
+.bg-\[\#ffffff30\]{
+  background-color: #ffffff30;
+}
+
 .bg-\[\#ffffff60\]{
   background-color: #ffffff60;
 }
@@ -1085,11 +1092,6 @@ video {
 .bg-primary{
   --tw-bg-opacity: 1;
   background-color: rgb(24 24 36 / var(--tw-bg-opacity));
-}
-
-.bg-purple-600{
-  --tw-bg-opacity: 1;
-  background-color: rgb(147 51 234 / var(--tw-bg-opacity));
 }
 
 .bg-red-300{
@@ -1100,6 +1102,11 @@ video {
 .bg-red-500{
   --tw-bg-opacity: 1;
   background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}
+
+.bg-red-600{
+  --tw-bg-opacity: 1;
+  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
 }
 
 .bg-sky-200{
@@ -1142,50 +1149,17 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-red-200{
+.bg-green-600{
   --tw-bg-opacity: 1;
-  background-color: rgb(254 202 202 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#ffffff\]{
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#ffffff30\]{
-  background-color: #ffffff30;
-}
-
-.bg-\[\#\]{
-  background-color: #;
-}
-
-.bg-\[\#ffffff0\]{
-  background-color: #ffffff0;
-}
-
-.bg-\[\#ffffff00\]{
-  background-color: #ffffff00;
-}
-
-.bg-opacity-5{
-  --tw-bg-opacity: 0.05;
+  background-color: rgb(22 163 74 / var(--tw-bg-opacity));
 }
 
 .bg-\[url\(\"src\/assets\/images\/bg__1\.png\"\)\]{
   background-image: url("src/assets/images/bg__1.png");
 }
 
-.bg-\[url\(\'src\/assets\/images\/bg__1\.jpg\'\)\]{
-  background-image: url('src/assets/images/bg__1.jpg');
-}
-
 .bg-gradient-to-r{
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
-}
-
-.bg-none{
-  background-image: none;
 }
 
 .from-gray-900{
@@ -1216,10 +1190,6 @@ video {
 
 .bg-cover{
   background-size: cover;
-}
-
-.bg-no-repeat{
-  background-repeat: no-repeat;
 }
 
 .p-16{
@@ -1297,6 +1267,11 @@ video {
 .py-3{
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
+}
+
+.py-3\.5{
+  padding-top: 0.875rem;
+  padding-bottom: 0.875rem;
 }
 
 .py-4{
@@ -1518,11 +1493,6 @@ video {
 .text-sky-600{
   --tw-text-opacity: 1;
   color: rgb(2 132 199 / var(--tw-text-opacity));
-}
-
-.text-sky-800{
-  --tw-text-opacity: 1;
-  color: rgb(7 89 133 / var(--tw-text-opacity));
 }
 
 .text-slate-400{
@@ -1824,5 +1794,11 @@ video {
 
   .md\:w-full{
     width: 100%;
+  }
+}
+
+@media (min-width: 1024px){
+  .lg\:w-\[40\%\]{
+    width: 40%;
   }
 }
